refactor: Rename project and remove AI dependencies
The project has been renamed from "Gemini Hangman Elite" to "Elite Hangman".
All dependencies and code related to the Gemini AI service have been removed as the game will now focus on local multiplayer and manual word/phrase input only. This simplifies the project and removes external API reliance.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 
 {
-  "short_name": "Hangman",
-  "name": "Gemini Hangman Elite",
+  "short_name": "Elite Hangman",
+  "name": "Elite Hangman",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3665/3665910.png",
